activity main updated

--- a/BarcodeSample1/app/src/main/res/layout/activity_main_landscape.xml
+++ b/BarcodeSample1/app/src/main/res/layout/activity_main_landscape.xml
@@ -28,7 +28,7 @@
                         android:id="@+id/textViewSS"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Select Scanner:" />
+                        android:text="@string/select_scanner" />
                 </TableRow>
 
                 <TableRow
