--- a/BarcodeSample1/app/src/main/res/layout/activity_main.xml
+++ b/BarcodeSample1/app/src/main/res/layout/activity_main.xml
@@ -54,119 +54,119 @@
             android:text="@string/login_progress_signing_in_text"
             android:visibility="gone"/>
 
-        <TextView
-            android:id="@+id/textViewSS"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/select_scanner" />
+<!--        <TextView-->
+<!--            android:id="@+id/textViewSS"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/select_scanner" />-->
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--        <TableLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+<!--            <TableRow-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent" >-->
 
-                <Spinner
-                    android:id="@+id/spinnerScannerDevices"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-            </TableRow>
+<!--                <Spinner-->
+<!--                    android:id="@+id/spinnerScannerDevices"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1" />-->
+<!--            </TableRow>-->
 
-        </TableLayout>
+<!--        </TableLayout>-->
 
-        <TextView
-            android:id="@+id/textViewSD"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Select Decoders:" />
+<!--        <TextView-->
+<!--            android:id="@+id/textViewSD"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Select Decoders:" />-->
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--        <TableLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<!--            <TableRow-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent">-->
 
-                <CheckBox
-                    android:id="@+id/checkBoxEAN8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="EAN8" />
+<!--                <CheckBox-->
+<!--                    android:id="@+id/checkBoxEAN8"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:checked="true"-->
+<!--                    android:text="EAN8" />-->
 
-                <CheckBox
-                    android:id="@+id/checkBoxEAN13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="EAN13" />
-            </TableRow>
+<!--                <CheckBox-->
+<!--                    android:id="@+id/checkBoxEAN13"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:checked="true"-->
+<!--                    android:text="EAN13" />-->
+<!--            </TableRow>-->
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<!--            <TableRow-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent">-->
 
-                <CheckBox
-                    android:id="@+id/checkBoxCode39"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="Code39" />
+<!--                <CheckBox-->
+<!--                    android:id="@+id/checkBoxCode39"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:checked="true"-->
+<!--                    android:text="Code39" />-->
 
-                <CheckBox
-                    android:id="@+id/checkBoxCode128"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="Code128" />
-            </TableRow>
+<!--                <CheckBox-->
+<!--                    android:id="@+id/checkBoxCode128"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:checked="true"-->
+<!--                    android:text="Code128" />-->
+<!--            </TableRow>-->
 
-        </TableLayout>
+<!--        </TableLayout>-->
 
-        <Button
-            android:id="@+id/buttonScan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="softScan"
-            android:text="Scan" />
+<!--        <Button-->
+<!--            android:id="@+id/buttonScan"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:onClick="softScan"-->
+<!--            android:text="Scan" />-->
 
-        <TextView
-            android:id="@+id/textViewS"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Status:" />
+<!--        <TextView-->
+<!--            android:id="@+id/textViewS"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Status:" />-->
 
-        <TextView
-            android:id="@+id/textViewStatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+<!--        <TextView-->
+<!--            android:id="@+id/textViewStatus"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content" />-->
 
-        <TextView
-            android:id="@+id/textViewD"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Data:" />
+<!--        <TextView-->
+<!--            android:id="@+id/textViewD"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Data:" />-->
 
-        <ScrollView
-            android:id="@+id/scrollViewData"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--        <ScrollView-->
+<!--            android:id="@+id/scrollViewData"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical">-->
 
-                <TextView
-                    android:id="@+id/textViewData"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </ScrollView>
+<!--                <TextView-->
+<!--                    android:id="@+id/textViewData"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content" />-->
+<!--            </LinearLayout>-->
+<!--        </ScrollView>-->
 
     </LinearLayout>
 
