activity main xml updated

--- a/BarcodeSample1/app/src/main/res/layout/activity_main.xml
+++ b/BarcodeSample1/app/src/main/res/layout/activity_main.xml
@@ -131,8 +131,7 @@
                 <TableRow
                     android:id="@+id/scannedAssetsTableHeader"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/transparent">
+                    android:layout_height="match_parent">
 
                     <TextView
                         android:id="@+id/assetNumberHeader"
