--- a/BarcodeSample1/app/src/main/res/layout/activity_main.xml
+++ b/BarcodeSample1/app/src/main/res/layout/activity_main.xml
@@ -129,30 +129,45 @@
                 android:onClick="sendValidation"
                 android:visibility="gone" />
 
-            <TableLayout
-                android:id="@+id/scannedAssetsTable"
+            <Button
+                android:id="@+id/buttonScan"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:onClick="softScan"
+                android:text="Scan"
+                android:visibility="gone" />
 
-                <TableRow
-                    android:id="@+id/scannedAssetsTableHeader"
-                    android:layout_width="match_parent"
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="horizontal|vertical">
+
+                <TableLayout
+                    android:id="@+id/scannedAssetsTable"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/assetNumberHeader"
+                    <TableRow
+                        android:id="@+id/scannedAssetsTableHeader"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="@string/asset_number_header_text" />
+                        android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/assetDescriptionHeader"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="@string/asset_description_header_text"/>
-                </TableRow>
+                        <TextView
+                            android:id="@+id/assetNumberHeader"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/asset_number_header_text" />
 
-            </TableLayout>
+                        <TextView
+                            android:id="@+id/assetDescriptionHeader"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="@string/asset_description_header_text"/>
+                    </TableRow>
+
+                </TableLayout>
+
+            </HorizontalScrollView>
 
             <TextView
                 android:id="@+id/textViewSS"
@@ -230,14 +245,6 @@
                 </TableRow>
 
             </TableLayout>
-
-            <Button
-                android:id="@+id/buttonScan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="softScan"
-                android:text="Scan"
-                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/textViewS"
