--- a/BarcodeSample1/app/src/main/res/menu/main.xml
+++ b/BarcodeSample1/app/src/main/res/menu/main.xml
@@ -1,5 +1,53 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
+>
+    <!--<item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+    />-->
+
+    <item
+        android:id="@+id/iniciar_sesion"
+        android:title="@string/iniciar_sesi_n"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+    />
+
+    <item
+        android:id="@+id/action_fetch_data"
+        android:title="@string/descargar_datos"
+        android:orderInCategory="99"
+        android:showAsAction="never"
+    />
+
+    <item
+        android:id="@+id/old_validations"
+        android:title="@string/ver_confrontas"
+        android:orderInCategory="98"
+        android:showAsAction="never"
+    />
+
+    <item
+        android:id="@+id/new_validation"
+        android:title="@string/nueva_confronta"
+        android:orderInCategory="97"
+        android:showAsAction="never"
+    />
+
+    <item
+        android:id="@+id/assets_info"
+        android:title="@string/informaci_n_de_activos"
+        android:orderInCategory="96"
+        android:showAsAction="never"
+    />
+
+    <item
+        android:id="@+id/cerrar_sesi_n"
+        android:title="@string/cerrar_sesi_n"
+        android:orderInCategory="95"
+        android:showAsAction="never"
+    />
 </menu>
